dist/1.0/bin/sample/retrieveUnpackaged/objects/ConfiguredComponent__c.object
<CustomObject>
    <fields>
        <fullName>Actiontype__c</fullName>
        <label>Actiontype</label>
        <picklist>
            <picklistValues>
                <fullName>ADD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BundleComponent__c</fullName>
        <label>Bundle Component</label>
        <referenceTo>Bundle_Component__c</referenceTo>
        <relationshipLabel>Configured Components</relationshipLabel>
        <relationshipName>Configured_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Configured Components</relationshipLabel>
        <relationshipName>Configured_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConfiguredBundle__c</fullName>
        <label>Configured Bundle</label>
        <referenceTo>ConfiguredBundle__c</referenceTo>
        <relationshipLabel>Configured Components</relationshipLabel>
        <relationshipName>Configured_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Configured Component</label>
    <nameField>
        <label>Configured Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configured Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>